# dev-forge

./: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_shell.rs  lib.rs  main.rs
src-tauri/src/migrations/: 001_init.sql  002_authenticator.sql
src/components/: AppShell.tsx  CommandPalette.test.tsx  CommandPalette.tsx  HighlightedCodeBlock.tsx  MetricPill.tsx  PageStatusStrip.tsx  Panel.tsx  ToolHeader.tsx
src/hooks/: usePageChrome.tsx  useTheme.ts  useUsage.ts
src/lib/: desktop.test.ts  desktop.ts  launcher.test.ts  launcher.ts  storage.test.ts  storage.ts  toolRegistry.ts  utils.ts
src/lib/tools/: authenticator.test.ts  authenticator.ts  bandwidth.test.ts  bandwidth.ts  base64.test.ts  base64.ts  diff.test.ts  diff.ts  dns.test.ts  dns.ts  ip.test.ts  ip.ts  jsonYaml.test.ts  jsonYaml.ts  jwt.test.ts  jwt.ts  palette.test.ts  palette.ts  password.test.ts  password.ts  port.test.ts  port.ts  regex.test.ts  regex.ts  sql.test.ts  sql.ts  ssh.test.ts  (+9 more)
src/pages/: AuthenticatorPage.tsx  BandwidthPage.tsx  Base64Page.tsx  DashboardPage.tsx  DiffPage.tsx  DnsPage.tsx  IpPage.tsx  JsonYamlPage.tsx  JwtPage.tsx  PalettePage.tsx  PasswordPage.tsx  PortPage.tsx  RegexPage.tsx  SqlPage.tsx  SshKeyPage.tsx  TimestampPage.tsx  TranslatePage.tsx  UnitPage.test.tsx  UnitPage.tsx  UrlPage.tsx
tests/e2e/: app.spec.ts
