[package]
name = "devforge"
version = "0.1.0"
description = "DevForge developer toolbox"
authors = ["DevForge"]
edition = "2021"

[lib]
name = "devforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
block2 = "0.6.2"
fancy-regex = "0.18"
objc2 = { version = "0.6.4", features = ["exception"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSEvent", "NSResponder", "NSRunningApplication", "NSScreen", "NSWindow"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFString"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry", "NSNotification", "NSOperation", "NSString", "block2", "objc2-core-foundation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["sync"] }
